--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ bootstrap4==0.1.0
 certifi==2019.9.11
 chardet==3.0.4
 defusedxml==0.6.0
+dj-database-url==0.5.0
 Django==2.2.6
 django-allauth==0.40.0
 django-crispy-forms==1.7.2
@@ -21,3 +22,4 @@ requests-oauthlib==1.2.0
 sorl-thumbnail==12.5.0
 sqlparse==0.3.0
 urllib3==1.25.6
+whitenoise==4.1.4
