--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 bootstrap4==0.1.0
+boto3==1.10.26
+botocore==1.13.26
 certifi==2019.9.11
 chardet==3.0.4
 defusedxml==0.6.0
@@ -6,19 +8,25 @@ dj-database-url==0.5.0
 Django==2.2.6
 django-allauth==0.40.0
 django-crispy-forms==1.7.2
+django-storages==1.8
 django-tinymce4-lite==1.7.5
 docopt==0.4.0
+docutils==0.15.2
 gunicorn==19.9.0
 idna==2.8
+jmespath==0.9.4
 jsmin==2.2.2
 mailchimp==2.0.9
 oauthlib==3.1.0
 Pillow==6.2.0
 psycopg2-binary==2.8.3
+python-dateutil==2.8.0
 python3-openid==3.1.0
 pytz==2019.3
 requests==2.22.0
 requests-oauthlib==1.2.0
+s3transfer==0.2.1
+six==1.13.0
 sorl-thumbnail==12.5.0
 sqlparse==0.3.0
 urllib3==1.25.6
