--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ dj-database-url==0.5.0
 Django==2.2.6
 django-allauth==0.40.0
 django-crispy-forms==1.7.2
+django-hitcount==1.3.1
 django-storages==1.8
 django-tinymce4-lite==1.7.5
 docopt==0.4.0
