--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ defusedxml==0.6.0
 dj-database-url==0.5.0
 Django==2.2.6
 django-allauth==0.40.0
+django-cors-headers==3.5.0
 django-crispy-forms==1.7.2
 django-hitcount==1.3.1
 django-storages==1.8
