--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,12 @@ django-allauth==0.40.0
 django-cors-headers==3.5.0
 django-crispy-forms==1.7.2
 django-hitcount==1.3.1
+django-rest-auth==0.9.5
 django-storages==1.8
 django-tinymce4-lite==1.7.5
 djangorestframework==3.12.0
+djangorestframework-jwt==1.11.0
+djangorestframework-simplejwt==4.4.0
 docopt==0.4.0
 docutils==0.15.2
 gunicorn==19.9.0
@@ -23,6 +26,7 @@ mailchimp==2.0.9
 oauthlib==3.1.0
 Pillow==6.2.0
 psycopg2-binary==2.8.3
+PyJWT==1.7.1
 python-dateutil==2.8.0
 python3-openid==3.1.0
 pytz==2019.3
