--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Django==2.2.6
 django-allauth==0.40.0
 django-cors-headers==3.5.0
 django-crispy-forms==1.7.2
+django-filter==2.4.0
 django-hitcount==1.3.1
 django-rest-auth==0.9.5
 django-storages==1.8
